--- a/Turistando.html
+++ b/Turistando.html
@@ -7,31 +7,58 @@
 	</head>
 	<body>
 		<div class="container">
-		<h1><a href="">O que mais frequento em Blumenau</a></h1>
-		<img src="">
-		<div class="place"><h2><a href="https://www.instagram.com/tamandarefoodpark" title="Instagram Tamandaré Food Park" tabindex="1">Tamandaré Food Park</a></h2>
-		<p>O food park mais charmoso de blumenau. Uma praça de alimentação a céu aberto com stadns e containers estilizados que servem uma gastronomia variada.
-		Vale a pena dar uma conferida quando estiver na cidade!</p>
-		Veja no <a href="https://www.google.com/maps/dir/-26.8750718,-49.0716194/cervejaria+balburdia+blumenau/@-26.8886976,-49.0947758,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94df19ceca48a26d:0xba17998272b755f7!2m2!1d-49.0800591!2d-26.9077427?hl=pt-BR" title="Localização" tabindex="2">mapa </a> com chegar.
-		</div>
+			<div class="places">
+				<h1><a href="">O que mais frequento em Blumenau</a></h1>
+				<div class="place">
+				<h2><a href="https://www.instagram.com/tamandarefoodpark" title="Instagram Tamandaré Food Park" tabindex="1">Tamandaré Food Park</a></h2>
+				<img src="tamandare.jpg" alt="Tamandaré Food Park" width="180" />
+				<p>O food park mais charmoso de blumenau. Uma praça de alimentação a céu aberto com stadns e containers estilizados que servem uma gastronomia variada.
+				Vale a pena dar uma conferida quando estiver na cidade!</p>
+				Veja no <a href="https://www.google.com/maps/dir/-26.8750718,-49.0716194/cervejaria+balburdia+blumenau/@-26.8886976,-49.0947758,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94df19ceca48a26d:0xba17998272b755f7!2m2!1d-49.0800591!2d-26.9077427?hl=pt-BR" title="Localização" tabindex="2">mapa </a> com chegar.
+				<div class="clear"></div>
+				</div>
 
-		<div class="place"><h2><a href="https://www.instagram.com/balburdiacervejeira" title="Instagram Balbúrdia" tabindex="3"> Cervejaria Balbúrdia</a></h2>
-		<p>Uma cervejaria artesal, independente e brasileira.
-		Ótimo lugar para ser reunir com amigos, possui mesas compartilhadas e cervejas diferenciadas. O lugar também é pet friendly, seu pet é bem vindo e também terá atenção especial. A cervejaria conta também com uma torneira com água gelada à disposição dos clientes.
-		Caso queira alguma recordação do lugar, a Balbúrdia conta uma lojinha com diversos itens a preço de custo.</p>
-		<a href="https://balburdia.com.br/nas-torneiras/" title="Cardápio de cervejas" tabindex="4"> Veja o que tem nas torneiras da Balbúrdia.</a>
-		<p>Se beber não dirija!</p>
-		</div>
+				<div class="place">	
+				<h2><a href="https://www.instagram.com/balburdiacervejeira" title="Instagram Balbúrdia" tabindex="3"> Cervejaria Balbúrdia</a></h2>
+				<img src="balburdia.jpg" alt="Cervejaria Balburdia" width="180" />
+				<p>Uma cervejaria artesal, independente e brasileira.
+				Ótimo lugar para ser reunir com amigos, possui mesas compartilhadas e cervejas diferenciadas. O lugar também é pet friendly, seu pet é bem vindo e também terá atenção especial. A cervejaria conta também com uma torneira com água gelada à disposição dos clientes.
+				Caso queira alguma recordação do lugar, a Balbúrdia conta uma lojinha com diversos itens a preço de custo.</p>
+				<a href="https://balburdia.com.br/nas-torneiras/" title="Cardápio de cervejas" tabindex="4"> Veja o que tem nas torneiras da Balbúrdia.</a>
+				<p>Se beber não dirija!</p>
+				<div class="clear"></div>
+				</div>
 
-		<div class="place"><h2><a href="https://www.instagram.com/nanahamburgueria" title="Instagram Nana Hamburgueria" tabindex="5">Nana Hamburgueria</a></h2>
-		<p>Lanchonete descolada com pegada de pub serve hambúrgueres gourmet, cervejas artesanais e tem área externa. Pra quem gosta de um bom hamburguer gourmet, não pode deixar de visitar o lugar.</p>
-		Aproveita e pede um <a href="https://www.nanaemcasa.com.vc" title="Delivery Nana" tabindex="6">Nana em casa!</a>
-		</div>
+				<div class="place">
+				<h2><a href="https://www.instagram.com/nanahamburgueria" title="Instagram Nana Hamburgueria" tabindex="5">Nana Hamburgueria</a></h2>
+				<img src="nana.jpg" alt="Nana Hamburgueria" width="180" />
+				<p>Lanchonete descolada com pegada de pub serve hambúrgueres gourmet, cervejas artesanais e tem área externa. Pra quem gosta de um bom hamburguer gourmet, não pode deixar de visitar o lugar.</p>
+				Aproveita e pede um <a href="https://www.nanaemcasa.com.vc" title="Delivery Nana" tabindex="6">Nana em casa!</a>
+				<div class="clear"></div>
+				</div>
 
-		<div class="place"><h2><a href="https://www.instagram.com/bravasushi" title="Instagram Brava Sushi" tabindex="7">Brava sushi</a></h2>
-		<p>Pra quem gosta de comida japonesa, Brava sushi conta com um descontraído menu clássico repaginado, em espaço intimista com pequena área infantil.</p>
-		Confere <a href="https://www.bravasushi.com.br/" title="Site Brava Sushi" tabindex="8">aqui</a> o cardápio!
+				<div class="place">
+				<h2><a href="https://www.instagram.com/bravasushi" title="Instagram Brava Sushi" tabindex="7">Brava sushi</a></h2>
+				<img src="brava.jpg" alt="Brava Sushi" width="180" />
+				<p>Pra quem gosta de comida japonesa, Brava sushi conta com um descontraído menu clássico repaginado, em espaço intimista com pequena área infantil.</p>
+				Confere <a href="https://www.bravasushi.com.br/" title="Site Brava Sushi" tabindex="8">aqui</a> o cardápio!
+				<div class="clear"></div>
+				</div>	
+			</div>	
 		</div>
+		<div class="sidebar">
+			<h3>E existem mais lugares interessantes na cidade...</h3>
+			<ul>
+				<li>Parque Ramiro Ruediger</li>
+				<li>Vila Germânica</li>
+				<li>Cervejaria Eisenbahn</li>
+				<li>Factory Beira Rio e Antônio da Veiga</li>
+				<li>Cachorro quente da Bibinha</li>
+				<li>Burger Bravo</li>
+			</ul>
+		</div>
+		<div class="footer clear">
+			<p>Parte do livro "HTML5 e CSS3: Domine a web do futuro" and my mind.</p>
 		</div>
 	</body>
 </html>
