alteracao de sidebar para o correto sidenote

--- a/Turistando.html
+++ b/Turistando.html
@@ -46,7 +46,7 @@
 				</div>	
 			</div>	
 		</div>
-		<div class="sidebar">
+		<div class="sidenote">
 			<h3>E existem mais lugares interessantes na cidade...</h3>
 			<ul>
 				<li>Parque Ramiro Ruediger</li>
