--- a/Turistando.html
+++ b/Turistando.html
@@ -58,7 +58,7 @@
 			</ul>
 		</aside>
 		<footer class="clear">
-			<p>Parte do livro "HTML5 e CSS3: Domine a web do futuro" and my mind.</p>
+			<p>Parte do livro "HTML5 e CSS3: Domine a web do futuro".</p>
 		</footer>
 	</body>
 </html>
