--- a/Turistando.html
+++ b/Turistando.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="container">
 			<section>
-				<h1><a href="">O que mais frequento em Blumenau</a></h1>
+				<h1><a href="">Bons lugares em Blumenau</a></h1>
 				<article>
 				<h2><a href="https://www.instagram.com/tamandarefoodpark" title="Instagram Tamandaré Food Park" tabindex="1">Tamandaré Food Park</a></h2>
 				<img src="tamandare.jpg" alt="Tamandaré Food Park" width="180" />
